# keyboard

./: .gitignore  Makefile.am  README.md  configure.ac  mk.sh
include/: Makefile.am  keyboard.h
src/: Makefile.am  keyboard.c
test/: Makefile  main.c  run.sh
